--- a/app/src/main/res/layout/activity_edit_list.xml
+++ b/app/src/main/res/layout/activity_edit_list.xml
@@ -8,18 +8,20 @@
 
     <ImageView
         android:id="@+id/back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="24sp"
+        android:layout_height="24sp"
+        android:src="@drawable/back"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/abc_vector_test" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="28sp"
+        android:textColor="#000000"
         android:text="列清单"
         app:layout_constraintBottom_toBottomOf="@+id/back"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,8 +40,9 @@
 
     <TextView
         android:id="@+id/date_pick"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100sp"
+        android:layout_height="20sp"
+        android:gravity="center"
         android:text="日期"
         app:layout_constraintBottom_toBottomOf="@+id/priority"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,11 +53,11 @@
         android:id="@+id/checkBoxEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="128dp"
+        android:layout_marginEnd="108dp"
         app:layout_constraintBottom_toBottomOf="@+id/priority"
         app:layout_constraintEnd_toStartOf="@+id/date_pick"
         app:layout_constraintTop_toTopOf="@+id/priority"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.75" />
 
     <EditText
         android:id="@+id/edit"
