--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,20 +8,23 @@
 
     <ImageView
         android:id="@+id/photo"
-        android:layout_width="60sp"
-        android:layout_height="30sp"
+        android:layout_width="300sp"
+        android:layout_height="160sp"
+        android:src="@drawable/photo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.131" />
+        app:layout_constraintVertical_bias="0.07" />
 
     <Button
         android:id="@+id/check"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
+        android:layout_height="60sp"
+        android:text="打卡"
+        android:textSize="20sp"
+        android:background="@drawable/home_btn"
         app:layout_constraintBottom_toBottomOf="@+id/weekly_report"
         app:layout_constraintEnd_toStartOf="@+id/weekly_report"
         app:layout_constraintHorizontal_bias="0.506"
@@ -30,21 +33,25 @@
 
     <Button
         android:id="@+id/weekly_report"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
+        android:layout_width="120sp"
+        android:layout_height="60sp"
+        android:background="@drawable/home_btn"
+        android:text="学习周报"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.267" />
+        app:layout_constraintVertical_bias="0.332" />
 
     <Button
         android:id="@+id/favorite"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
+        android:layout_height="60sp"
+        android:text="收藏"
+        android:textSize="20sp"
+        android:background="@drawable/home_btn"
         app:layout_constraintBottom_toBottomOf="@+id/weekly_report"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/weekly_report"
@@ -52,40 +59,46 @@
 
     <Button
         android:id="@+id/list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:text="Button"
+        android:layout_width="380sp"
+        android:layout_height="120sp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/home_btn"
+        android:text="学习清单"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/weekly_report"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="@+id/weekly_report"
         app:layout_constraintTop_toBottomOf="@+id/weekly_report" />
 
     <Button
         android:id="@+id/clock"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
-        android:text="Button"
+        android:layout_width="380sp"
+        android:layout_height="120sp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/home_btn"
+        android:text="番茄钟"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/list"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/list"
         app:layout_constraintTop_toBottomOf="@+id/list" />
 
     <Button
         android:id="@+id/daily_report"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
-        android:text="Button"
+        android:layout_width="380sp"
+        android:layout_height="120sp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/home_btn"
+        android:text="每日复盘"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/clock"
-        app:layout_constraintHorizontal_bias="0.543"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/clock"
         app:layout_constraintTop_toBottomOf="@+id/clock" />
 
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30sp"
+        android:layout_height="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@tools:sample/avatars" />
@@ -95,15 +108,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:text="TextView"
+        android:textColor="#000000"
+        android:text="大一"
+        android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/icon"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/history"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_notifications_black_24dp"
+        android:layout_width="40sp"
+        android:layout_height="40sp"
+        android:src="@drawable/history"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
