--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,21 +3,21 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/home"
         android:title="首页" />
 
     <item
         android:id="@+id/navigation_course"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/course"
         android:title="课程" />
 
     <item
         android:id="@+id/navigation_question"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/ask"
         android:title="提问" />
     <item
         android:id="@+id/navigation_me"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/me"
         android:title="我" />
 
 
