--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,15 @@
     <color name="colorPrimary">#FFFFFF</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="black">#000000</color>
+
+    <color name="darkGray">#2B2B2B</color>
+
+    <color name="gray">#717171</color>
+
+    <color name="blue">#42A5F5</color>
+
+    <color name="white">#FFFFFF</color>
+
+    <color name="backGround1">#E3F2FD</color>
 </resources>
