--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,7 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="theme1" parent="Theme.MaterialComponents.Light.NoActionBar"/>
+
+    <style name="dialog" parent="Theme.MaterialComponents.Dialog"/>
 </resources>
