--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -104,7 +104,7 @@
         tools:src="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/grade"
+        android:id="@+id/grade_home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
