--- a/app/src/main/res/layout/course_item.xml
+++ b/app/src/main/res/layout/course_item.xml
@@ -5,13 +5,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.cardview.widget.CardView
         android:layout_width="100sp"
-        android:layout_height="wrap_content"
+        android:layout_height="20sp"
         app:cardCornerRadius="5sp"
         app:cardElevation="0sp">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/course"
+            android:textColor="#000000"
             android:layout_gravity="center"
             android:gravity="center"/>
 
